# deku

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: main.rs
crates/node-agent/: Cargo.toml
crates/node-agent/src/: main.rs
manifests/: demo-pod.yaml
