[package]
name = "node-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
kube = { version = "1.1", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.25", features = ["v1_33"] }
anyhow = "1.0"
